--- a/center-oauth/src/main/resources/application.properties
+++ b/center-oauth/src/main/resources/application.properties
@@ -1,3 +1,4 @@
-logging.level.org.springframework.security=debug
+#logging.level.org.springframework.security=debug
+logging.level.org.springframework.boot.test.web.client=debug
 security.user.password=password
 security.oauth2.resource.filter-order=3
