move configurations to main package

--- a/center-oauth/src/main/resources/bootstrap.yml
+++ b/center-oauth/src/main/resources/bootstrap.yml
@@ -1,3 +1,11 @@
 spring:
   application:
     name: center-oauth
+security:
+  oauth2:
+    resource:
+      filter-order: 3
+logging:
+  level:
+    org.springframework.security: debug
+    org.springframework.boot.test.web.client: debug
