--- a/center-oauth/src/main/resources/application-integration-test.yml
+++ b/center-oauth/src/main/resources/application-integration-test.yml
@@ -2,9 +2,9 @@ spring:
   datasource:
     url: jdbc:h2:mem:testdb
     type: com.alibaba.druid.pool.DruidDataSource
-    driver-class-name: org.h2.Driver
   h2:
     console:
       enabled: true
   jpa:
     show-sql: true
+    generate-ddl: true
