--- a/center-oauth/src/main/resources/application-integration-test.yml
+++ b/center-oauth/src/main/resources/application-integration-test.yml
@@ -2,9 +2,9 @@ spring:
   datasource:
     url: jdbc:h2:mem:testdb
     type: com.alibaba.druid.pool.DruidDataSource
-  h2:
-    console:
-      enabled: true
   jpa:
     show-sql: true
     generate-ddl: true
+logging:
+  level:
+    org.springframework.security: debug
