--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 version: "3"
 services:
-#  eureka:
-#    image: registry.cn-beijing.aliyuncs.com/wangdali/center-eureka
-#    environment:
-#      SPRING_PROFILES_ACTIVE: docker
-#      TZ: Asia/Shanghai
-#    ports:
-#      - "8761:8761"
+  eureka:
+    image: registry.cn-beijing.aliyuncs.com/wangdali/center-eureka
+    environment:
+      SPRING_PROFILES_ACTIVE: docker
+      TZ: Asia/Shanghai
+    ports:
+      - "8761:8761"
   mysql:
     image: mysql:5.7.21
     environment:
