--- a/center-oauth/src/main/resources/bootstrap.yml
+++ b/center-oauth/src/main/resources/bootstrap.yml
@@ -1,3 +1,10 @@
 spring:
   application:
     name: center-oauth
+---
+spring:
+  profiles: docker
+eureka:
+  client:
+    service-url:
+      defaultZone: http://eureka:8761/eureka/
