--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,29 @@
 version: "3"
 services:
   eureka:
+    build: center-eureka
     image: registry.cn-beijing.aliyuncs.com/wangdali/center-eureka
     environment:
       SPRING_PROFILES_ACTIVE: docker
       TZ: Asia/Shanghai
     ports:
       - "8761:8761"
+  oauth:
+    build: center-oauth
+    image: registry.cn-beijing.aliyuncs.com/wangdali/center-oauth
+    environment:
+      SPRING_PROFILES_ACTIVE: docker
+      TZ: Asia/Shanghai
+    ports:
+      - "8080:8080"
+  user:
+    build: service-user
+    image: registry.cn-beijing.aliyuncs.com/wangdali/service-user
+    environment:
+      SPRING_PROFILES_ACTIVE: docker
+      TZ: Asia/Shanghai
+    ports:
+      - "8081:8080"
   mysql:
     image: mysql:5.7.21
     environment:
