--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,14 +16,14 @@ services:
       TZ: Asia/Shanghai
     ports:
       - "8080:8080"
-  user:
-    build: service-user
-    image: registry.cn-beijing.aliyuncs.com/wangdali/service-user
-    environment:
-      SPRING_PROFILES_ACTIVE: docker
-      TZ: Asia/Shanghai
-    ports:
-      - "8081:8080"
+#  user:
+#    build: service-user
+#    image: registry.cn-beijing.aliyuncs.com/wangdali/service-user
+#    environment:
+#      SPRING_PROFILES_ACTIVE: docker
+#      TZ: Asia/Shanghai
+#    ports:
+#      - "8081:8080"
   mysql:
     image: mysql:5.7.21
     environment:
