--- a/service-user/src/main/resources/application.yml
+++ b/service-user/src/main/resources/application.yml
@@ -7,3 +7,10 @@ security:
       user-authorization-uri: ${oauth.url}/oauth/authorize
     resource:
       token-info-uri: ${oauth.url}/oauth/check_token
+spring:
+  datasource:
+    url: jdbc:mysql:///testcloud?useUnicode=true&characterEncoding=utf8&useSSL=false&autoReconnect=true&createDatabaseIfNotExist=true
+    type: com.alibaba.druid.pool.DruidDataSource
+    username: root
+    password: root
+    driver-class-name: com.mysql.jdbc.Driver
