--- a/center-oauth/pom.xml
+++ b/center-oauth/pom.xml
@@ -14,7 +14,8 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.0.0.RELEASE</version>
+    <version>1.5.13.RELEASE</version>
+    <!--<version>2.0.0.RELEASE</version>-->
     <relativePath/> <!-- lookup par6ent from repository -->
   </parent>
 
@@ -22,7 +23,8 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <java.version>1.8</java.version>
-    <spring-cloud.version>Finchley.RC1</spring-cloud.version>
+    <!--<spring-cloud.version>Finchley.RC1</spring-cloud.version>-->
+    <spring-cloud.version>Edgware.SR3</spring-cloud.version>
     <docker.image.prefix>registry.cn-beijing.aliyuncs.com/wangdali</docker.image.prefix>
   </properties>
 
@@ -31,9 +33,13 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-jpa</artifactId>
     </dependency>
+    <!--<dependency>-->
+      <!--<groupId>org.springframework.cloud</groupId>-->
+      <!--<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>-->
+    <!--</dependency>-->
     <dependency>
       <groupId>org.springframework.cloud</groupId>
-      <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+      <artifactId>spring-cloud-starter-eureka</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -124,7 +130,7 @@
     </plugins>
   </build>
 
-  <repositories>
+  <!--<repositories>
     <repository>
       <id>spring-milestones</id>
       <name>Spring Milestones</name>
@@ -133,5 +139,5 @@
         <enabled>false</enabled>
       </snapshots>
     </repository>
-  </repositories>
+  </repositories>-->
 </project>
