--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,3 +34,9 @@ services:
     volumes:
       - "./docker/data/mysql:/var/lib/mysql"
       - "./docker/conf/mysql/my.cnf:/etc/mysql/conf.d/my.cnf"
+  redis:
+    image: redis:3.2.11
+    ports:
+      - "6379:6379"
+    environment:
+      TZ: Asia/Shanghai
