--- a/center-oauth/src/main/resources/bootstrap.yml
+++ b/center-oauth/src/main/resources/bootstrap.yml
@@ -3,7 +3,26 @@ spring:
     name: center-oauth
 ---
 spring:
+  profiles: default
+  datasource:
+    username: root
+    password: root
+    url: jdbc:mysql:///oauth?useUnicode=true&characterEncoding=utf8&useSSL=false&autoReconnect=true&createDatabaseIfNotExist=true
+    driver-class-name: com.mysql.jdbc.Driver
+    type: com.alibaba.druid.pool.DruidDataSource
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+---
+spring:
   profiles: docker
+  datasource:
+    username: root
+    password: root
+    url: jdbc:mysql://mysql:3306/oauth?useUnicode=true&characterEncoding=utf8&useSSL=false&autoReconnect=true&createDatabaseIfNotExist=true
+    driver-class-name: com.mysql.jdbc.Driver
+    type: com.alibaba.druid.pool.DruidDataSource
 eureka:
   client:
     service-url:
